Fix label position and flickering

--- a/components/Toolbar/toolbar.scss
+++ b/components/Toolbar/toolbar.scss
@@ -68,6 +68,10 @@
   padding: 0.25rem;
 }
 
+.toolbar-button-label {
+  align-self: flex-end;
+}
+
 .toolbar-button-icon,
 .toolbar-button-label,
 .toolbar-button-label.always,
